Fixed wrong color name.

--- a/stylesSass/modules/_input.scss
+++ b/stylesSass/modules/_input.scss
@@ -14,5 +14,5 @@
 }
 
 .input::placeholder {
-  color: darken($color__font-aside__base, 10%);
+  color: darken($color__font-aside--base, 10%);
 }
